install dependencies with style!

--- a/index.html
+++ b/index.html
@@ -2,13 +2,24 @@
 <html>
 <head>
   <title>Herod</title>
-  <link href="reset.css" rel="stylesheet" type="text/css" media="all">
+  <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
   <link href="main.css" rel="stylesheet" type="text/css" media="all">
 
-  <script src="bower_components/svg.js/dist/svg.min.js"></script>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="bower_components/angular/angular.min.js"></script>
+  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="bower_components/svg.js/dist/svg.min.js"></script>
 </head>
 <body>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <span class="navbar-brand">Herod</span>
+        <p class="navbar-text"><em>Now you're killing dragons with style!</em></p>
+      </div>
+    </div>
+  </nav>
+
   <div id="drawing"></div>
   <script src="main.js"></script>
 </body>
