change tag phrase

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <span class="navbar-brand">Herod</span>
-        <p class="navbar-text"><em>Now you're killing dragons with style!</em></p>
+        <p class="navbar-text"><em>Now you're slaying dragons with style!</em></p>
       </div>
     </div>
   </nav>
@@ -28,7 +28,7 @@
     <div class="col-md-6">
       <div id="ecu"></div>
     </div>
-    
+
     <div class="row">
       <div class="col-md-6">
         <div class="panel panel-default">
