--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <script src="bower_components/paper/dist/paper-core.js"></script>
 
   <script src="js/ressources.js"></script>
+  <script src="js/geometry.js"></script>
+  <script src="js/table.js"></script>
   <script src="js/ecu.js"></script>
   <script src="js/app.js"></script>
 </head>
