--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
 	<link href="main.css" rel="stylesheet" type="text/css" media="all">
 
-	<script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="bower_components/jquery/dist/jquery.js"></script>
 	<script src="bower_components/angular/angular.js"></script>
 	<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-	<script src="bower_components/lodash/dist/lodash.min.js"></script>
+	<script src="bower_components/lodash/dist/lodash.js"></script>
 	<script src="bower_components/paper/dist/paper-core.js"></script>
 
 	<script src="js/ressources.js"></script>
