--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 	<script src="bower_components/lodash/dist/lodash.js"></script>
 	<script src="bower_components/paper/dist/paper-core.js"></script>
 
+	<script src="js/data-model.js"></script>
 	<script src="js/ressources.js"></script>
 	<script src="js/geometry.js"></script>
 	<script src="js/table.js"></script>
 	<script src="js/ecu.js"></script>
+	<script src="js/herod-xml.js"></script>
 	<script src="js/app.js"></script>
 </head>
 <body ng-app="herod">
