--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Herod</title>
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all">
 	<link href="main.css" rel="stylesheet" type="text/css" media="all">
